# algo_TimeComplexity

./: .gitignore  Dockerfile  README.md  docker-compose.yml
GreenIT_data/: data_list_10.csv  data_list_100.csv  data_list_1000.csv  data_list_10000.csv  data_list_100000.csv  data_list_150.csv  data_list_1500.csv  data_list_15000.csv  data_list_150000.csv  data_list_20.csv  data_list_200.csv  data_list_2000.csv  data_list_20000.csv  data_list_200000.csv  data_list_30.csv  data_list_300.csv  data_list_3000.csv  data_list_30000.csv  data_list_300000.csv  data_list_40.csv  data_list_400.csv  data_list_4000.csv  data_list_40000.csv  data_list_400000.csv  data_list_50.csv  data_list_500.csv  data_list_5000.csv  data_list_50000.csv  data_list_500000.csv  data_list_75.csv  data_list_750.csv  data_list_7500.csv  data_list_75000.csv  data_list_750000.csv
app/: __init__.py  algo.py  pyproject.toml  test_docker.py
