[project]
name = "algo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "jupyterlab"]

[project.scripts]
algo-analyze = "algo.algo:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"